[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultra-rest-client"
dynamic = ["version"]
description = "A sample Python client for communicating with the UltraDNS REST API"
readme = "README.md"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "ultradns", email = "ultrassp-oss@vercara.com" },
]
keywords = [
    "ultra_rest_client",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/ultradns/python_rest_api_client"

[tool.hatch.version]
path = "ultra_rest_client/about.py"

[tool.hatch.build.targets.sdist]
include = [
    "/ultra_rest_client",
]
